added lottie animation

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,3 +43,8 @@ mat-form-field.mat-form-field.ng-tns-c92-2.mat-primary.mat-form-field-type-mat-i
   width: 1080px;
   text-align: center;
 }
+
+.mat-form-field.ng-tns-c92-3.mat-primary.ng-star-inserted.mat-form-field-type-mat-input.mat-form-field-appearance-fill.mat-form-field-can-float.mat-form-field-has-label.mat-form-field-hide-placeholder {
+  width: 1080px;
+  text-align: center;
+}
