--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,71 +1,56 @@
 <mat-stepper [linear]="isLinear" #stepper animationDuration="2000">
   <mat-step #firstStep [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup">
-      <ng-template matStepLabel>Add Style Image</ng-template>
-      <mat-form-field appearance="fill">
-        <mat-label>Add Style Image</mat-label>
-        <input matInput formControlName="firstCtrl" required />
-        <div class="custom-dropzone" ngx-dropzone>
-          <ngx-dropzone (change)="onSelectStyleFile($event)" [multiple]="false" accept="image/jpeg,image/jpg,image/png">
-            <ngx-dropzone-label>Drop Style Image</ngx-dropzone-label>
-            <ngx-dropzone-image-preview
-              [removable]="true"
-              ngProjectAs="ngx-dropzone-preview"
-              (removed)="onRemoveStyleFile(stylefile)"
-              *ngIf="stylefile!=undefined"
-              [file]="stylefile"
-            >
-              <ngx-dropzone-label>{{ stylefile.name }} ({{ stylefile.type }})</ngx-dropzone-label>
-            </ngx-dropzone-image-preview>
-          </ngx-dropzone>
-        </div>
-      </mat-form-field>
-      <div>
-        <button class="navigationButton" (click)="nextClicked()" [disabled]="!stylefileStatus">
-          <mat-icon>navigate_next</mat-icon>
-        </button>
-      </div>
-    </form>
+    <mat-label>Add Style Image</mat-label>
+    <div class="custom-dropzone" ngx-dropzone>
+      <ngx-dropzone (change)="onSelectStyleFile($event)" [multiple]="false" accept="image/jpeg,image/jpg,image/png">
+        <ngx-dropzone-label>Drop Style Image</ngx-dropzone-label>
+        <ngx-dropzone-image-preview
+          [removable]="true"
+          ngProjectAs="ngx-dropzone-preview"
+          (removed)="onRemoveStyleFile(stylefile)"
+          *ngIf="stylefile!=undefined"
+          [file]="stylefile"
+        >
+          <ngx-dropzone-label>{{ stylefile.name }} ({{ stylefile.type }})</ngx-dropzone-label>
+        </ngx-dropzone-image-preview>
+      </ngx-dropzone>
+    </div>
     <ng-image-slider
       [images]="imageObject"
       #nav
       [imagePopup]="false"
       (imageClick)="imageClicked($event)"
     ></ng-image-slider>
+    <div>
+      <button class="navigationButton" (click)="nextClicked()" [disabled]="!stylefileStatus">
+        <mat-icon>navigate_next</mat-icon>
+      </button>
+    </div>
   </mat-step>
   <mat-step #secondStep [stepControl]="secondFormGroup" label="Add Content Image">
-    <form [formGroup]="secondFormGroup">
-      <mat-form-field appearance="fill">
-        <mat-label>Add Content Image</mat-label>
-        <input matInput formControlName="secondCtrl" required />
-        <div class="custom-dropzone" ngx-dropzone>
-          <ngx-dropzone
-            (change)="onSelectContentFile($event)"
-            [multiple]="false"
-            accept="image/jpeg,image/jpg,image/png"
-          >
-            <ngx-dropzone-label>Drop Content Image</ngx-dropzone-label>
-            <ngx-dropzone-image-preview
-              [removable]="true"
-              ngProjectAs="ngx-dropzone-preview"
-              (removed)="onRemoveContentFile(contentfile)"
-              *ngIf="contentfile!=undefined"
-              [file]="contentfile"
-            >
-              <ngx-dropzone-label>{{ contentfile.name }} ({{ contentfile.type }})</ngx-dropzone-label>
-            </ngx-dropzone-image-preview>
-          </ngx-dropzone>
-        </div>
-      </mat-form-field>
-      <div>
-        <button class="navigationButton" mat-button matStepperPrevious>
-          <mat-icon>navigate_before</mat-icon>
-        </button>
-        <button class="navigationButton" (click)="nextClicked()" [disabled]="!contentfileStatus">
-          <mat-icon>navigate_next</mat-icon>
-        </button>
-      </div>
-    </form>
+    <mat-label>Add Content Image</mat-label>
+    <div class="custom-dropzone" ngx-dropzone>
+      <ngx-dropzone (change)="onSelectContentFile($event)" [multiple]="false" accept="image/jpeg,image/jpg,image/png">
+        <ngx-dropzone-label>Drop Content Image</ngx-dropzone-label>
+        <ngx-dropzone-image-preview
+          [removable]="true"
+          ngProjectAs="ngx-dropzone-preview"
+          (removed)="onRemoveContentFile(contentfile)"
+          *ngIf="contentfile!=undefined"
+          [file]="contentfile"
+        >
+          <ngx-dropzone-label>{{ contentfile.name }} ({{ contentfile.type }})</ngx-dropzone-label>
+        </ngx-dropzone-image-preview>
+      </ngx-dropzone>
+    </div>
+    <div>
+      <button class="navigationButton" mat-button matStepperPrevious>
+        <mat-icon>navigate_before</mat-icon>
+      </button>
+      <button class="navigationButton" (click)="nextClicked()" [disabled]="!contentfileStatus">
+        <mat-icon>navigate_next</mat-icon>
+      </button>
+    </div>
   </mat-step>
   <mat-step #thirdStep [stepControl]="thirdFormGroup" label="Processing">
     <form [formGroup]="thirdFormGroup">
