--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,21 @@
 <mat-stepper [linear]="isLinear" #stepper animationDuration="2000">
   <mat-step #firstStep [stepControl]="firstFormGroup">
-    <mat-label>Add Style Image</mat-label>
-    <div class="custom-dropzone" ngx-dropzone>
-      <ngx-dropzone (change)="onSelectStyleFile($event)" [multiple]="false" accept="image/jpeg,image/jpg,image/png">
-        <ngx-dropzone-label>Drop Style Image</ngx-dropzone-label>
-        <ngx-dropzone-image-preview
-          [removable]="true"
-          ngProjectAs="ngx-dropzone-preview"
-          (removed)="onRemoveStyleFile(stylefile)"
-          *ngIf="stylefile!=undefined"
-          [file]="stylefile"
-        >
-          <ngx-dropzone-label>{{ stylefile.name }} ({{ stylefile.type }})</ngx-dropzone-label>
-        </ngx-dropzone-image-preview>
-      </ngx-dropzone>
+    <div class="container">
+      <mat-label class="message">Add Style Image</mat-label>
+      <div class="custom-dropzone" ngx-dropzone>
+        <ngx-dropzone (change)="onSelectStyleFile($event)" [multiple]="false" accept="image/jpeg,image/jpg,image/png">
+          <ngx-dropzone-label class="message">Drop Style Image</ngx-dropzone-label>
+          <ngx-dropzone-image-preview
+            [removable]="true"
+            ngProjectAs="ngx-dropzone-preview"
+            (removed)="onRemoveStyleFile(stylefile)"
+            *ngIf="stylefile!=undefined"
+            [file]="stylefile"
+          >
+            <ngx-dropzone-label>{{ stylefile.name }} ({{ stylefile.type }})</ngx-dropzone-label>
+          </ngx-dropzone-image-preview>
+        </ngx-dropzone>
+      </div>
     </div>
     <ng-image-slider
       [images]="imageObject"
@@ -21,7 +23,7 @@
       [imagePopup]="false"
       (imageClick)="imageClicked($event)"
     ></ng-image-slider>
-    <div>
+    <div class="container">
       <button class="navigationButton" (click)="nextClicked()" [disabled]="!stylefileStatus">
         <mat-icon>navigate_next</mat-icon>
       </button>
