--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,6 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #424242;}
 
-.mat-horizontal-content-container.ng-tns-c82-0.ng-star-inserted {
-    text-align: center;
-  }
+.mat-horizontal-content-container.ng-tns-c90-0.ng-star-inserted {
+  text-align: -moz-center;
+}
