--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-monitor></app-monitor>
 <mat-stepper [linear]="isLinear" #stepper animationDuration="2000">
   <mat-step #firstStep [stepControl]="firstFormGroup">
     <div>
